# BetterPushbackC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_dep.common  build_release
.github/workflows/: build_debug.yml  build_release.yml
GL_for_Windows/include/GL/: GLAux.h  GLU.H  glui.h
GL_for_Windows/lib/: glaux.lib  glu32.lib  glui32.lib
data/icons/: accept_plan.xcf  place_seg.xcf
data/icons/ch/: accept_plan.xcf  place_seg.xcf  rotate_seg.xcf
data/icons/cn/: accept_plan.xcf  cancel_plan.xcf  conn_first.xcf  delete_seg.xcf  move_view.xcf  place_seg.xcf  rotate_seg.xcf
data/icons/de/: accept_plan.xcf  cancel_plan.xcf  conn_first.xcf  delete_seg.xcf  disconnect.xcf  move_view.xcf  place_seg.xcf  reconnect.xcf  rotate_seg.xcf
data/icons/en/: accept_plan.xcf  cancel_plan.xcf  conn_first.xcf  delete_seg.xcf  disconnect.xcf  move_view.xcf  place_seg.xcf  reconnect.xcf  rotate_seg.xcf
data/icons/es/: accept_plan.xcf  cancel_plan.xcf  conn_first.xcf  delete_seg.xcf  disconnect.xcf  move_view.xcf  place_seg.xcf  rotate_seg.xcf
data/icons/fr/: accept_plan.xcf  cancel_plan.xcf  conn_first.xcf  delete_seg.xcf  disconnect.xcf  move_view.xcf  place_seg.xcf  reconnect.xcf  rotate_seg.xcf
data/icons/pt/: accept_plan.xcf  cancel_plan.xcf  conn_first.xcf  delete_seg.xcf  disconnect.xcf  move_view.xcf  place_seg.xcf  reconnect.xcf  rotate_seg.xcf
data/icons/ru/: accept_plan.xcf  cancel_plan.xcf  conn_first.xcf  delete_seg.xcf  disconnect.xcf  move_view.xcf  place_seg.xcf  reconnect.xcf  rotate_seg.xcf
data/msgs/: README.txt  audacity_eq  cc_aliases.cfg  encode.sh  msg_text.txt
data/msgs/cn/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/de/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en(brittany)/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en(catstrator)/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en(jonfly)/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en-de/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn_nopark.opus  start_pb.opus  start_tow_nostart.opus  winch.opus
data/msgs/en-es/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en-fr/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb_nostart.opus  start_tow.opus  winch.opus
data/msgs/en-pt/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en-ru/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en_AU/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en_BR/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  ready2conn.opus  ready2conn_nopark.opus  start_pb.opus  start_pb_nostart.opus  start_tow.opus  start_tow_nostart.opus  winch.opus
data/msgs/en_GB/: connected.opus  disco.opus  done_left.opus  done_right.opus  driving_up.opus  op_complete.opus  plan_end.opus  plan_start.opus  (+7 more)
data/po/: strings.pot
libpng/: build_libpng_deps  libpng-1.6.30.tar.xz
libxml2/: build_libxml2_deps  libxml2-2.9.4.tar.xz
notarize/: ExportOptions.plist.orig  notarize.make
objects/: muffle_highs_eq.xml  unfuck_lights.sh
objects/src/: AST-3F.blend
objects/tugs/: LIVERIES_HOWTO.txt
pcre2/: build_pcre2_deps  pcre2-10.23.tar.bz2
qmake/: .gitignore  build-mac  build-win-lin  qmake.pro
src/: CMakeLists.txt  XCompile.cmake  acf_outline.c  acf_outline.h  assert.h  avl.c  avl.h  avl_impl.h  bp.c  bp.h  bp_cam.c  bp_cam.h  cab_view.c  cab_view.h  cfg.c  cfg.h  config.h  dr.c  dr.h  driving.c  driving.h  ff_a320_intf.c  ff_a320_intf.h  geom.c  geom.h  helpers.c  helpers.h  list.c  list.h  list_impl.h  log.c  log.h  math.c  math.h  msg.c  msg.h  riff.c  riff.h  time.c  time.h  (+11 more)
zlib/: build_zlib_deps
(+1798 files in other folders)
